--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "mongoose": "^3.8.17",
     "bower": "^1.3.12",
     "express-session": "^1.8.2",
-    "connect-flash": "^0.1.1"
+    "connect-flash": "^0.1.1",
+    "bcrypt-nodejs": "0.0.3",
+    "fbgraph": "^0.3.0"
   }
 }
